--- a/home.html
+++ b/home.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel = "stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Home</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body id="homebody">
+  <div id="buttons">
+    <button id="profilebutton" type="button">Profile</button>
+    <button id="Socialbutton" type="button">Social Media</button>
+    <button id="Jobbutton" type="button">Job Search</button>
+    <button id="logoutbutton" type="button">Logout</button>
+  </div>
+
+  <div id="Homediv">
+    <h1 id="Home">Home</h1>
+  </div>
+
+  <div id="infobuttons">
+    <button class="infobutton" data-index="1" type="button">About Us</button>
+    <button class="infobutton" data-index="2" type="button">Our Goal</button>
+  </div>
+
+  <div id="infobox">
+    <h1 id="infoheading">About Us</h1>
+    <p id="infop">[Enter text here]</p>
+  </div>
+
+  <script src="index.js"></script>
 </body>
 </html>
